# muchanipo

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  autoresearch.checks.sh  autoresearch.md  autoresearch.sh  muchanipo.md  progress.txt  pyproject.toml  requirements-real.txt
_assignments/: ASSIGNMENT_C22_phase0b_v2.md  ASSIGNMENT_C23_parallel.md  ASSIGNMENT_C29_issue_fixes.md  ASSIGNMENT_C30_idea_to_council.md  ASSIGNMENT_C30_model_router.md  ASSIGNMENT_C30_router_decided.md  ASSIGNMENT_C31_idea_to_council_impl.md  ASSIGNMENT_C33_native_app.md  ASSIGNMENT_C34_tauri_app.md
_research/: c22-review.md
agents/: arc-wiki.md
app/muchanipo-tauri/src-tauri/: Cargo.toml  tauri.conf.json
app/muchanipo-tauri/src-tauri/capabilities/: default.json
app/muchanipo-tauri/src-tauri/src/: events.rs  main.rs  python_bridge.rs
autoresearch/: config.json  eval-agent.py  model-router.json  rubric.json  session-check.py
benchmarks/: deep_research_cross_domain_matrix_rq46.json  deep_research_max_plus_b1.json  deep_research_max_plus_b1_rq17d_offtopic_sources.json
config/: config.json  model-router.json  plugin-slots.yaml  program.md  rubric.json  safety-immutable.yaml
docs/: PRD-v2.md  b1-goals-scope-acceptance.md  cli-json-contracts.md  data-transmission-notice.md  product-manual-ko.md  reference-implementation-inventory.md  reference-projects.md  security-baseline.md  studio-browser-uiux.md  wiring-real-llm.md
muchanipo/: __init__.py  __main__.py
raw/: 03_사업계획서.md  README.md
scripts/: analyze_run_artifact.py  autofix_loop.sh  build_incident_report.py  e2e_smoke.sh  (+4 more)
(+413 files in other folders)
