[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "muchanipo"
version = "0.0.0"
description = "MuchaNipo research council runtime"
requires-python = ">=3.11"
dependencies = ["httpx>=0.28"]

[project.scripts]
muchanipo = "src.muchanipo.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "muchanipo*"]

[tool.pytest.ini_options]
pythonpath = ["."]
