[package]
name = "muchanipo-tauri"
version = "0.1.0"
description = "Muchanipo Tauri 2 shell"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "muchanipo-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
